--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Ayuda</a></li>
+        <li><a href="#" onclick="Borrar()">Borrar Calculos</a></li>
+        <li><a href="javascript:history.go(0)">Borrar Todo</a></li>
+        <li><a href="#index-banner">Subir</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
@@ -48,7 +51,7 @@
         <div class="row" id="Clon" name="Fila">
          <div class="input-field col s3">
             
-            <input type="number" class="validate" name="Hosts" onkeypress="return isNumber(event)">
+            <input type="number" class="validate" id="Hosts" name="Hosts" onkeypress="return isNumber(event)">
             <label class="no-select">#Hosts</label>
          </div>
         </div>           
@@ -82,6 +85,12 @@
             }
             return true;
         }
+  </script>
+  <script>
+      function Borrar() {
+          document.getElementById("first_name2").reset();
+          document.getElementById("Hosts").reset();
+      }
   </script>
 
 
