Se agregaron botones para subir al principio y borrar calculos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Ayuda</a></li>
-        <li><a href="#" onclick="Borrar()">Borrar Calculos</a></li>
-        <li><a href="javascript:history.go(0)">Borrar Todo</a></li>
+        <li><a href="javascript:history.go(0)">Borrar</a></li>
         <li><a href="#index-banner">Subir</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -86,13 +85,5 @@
             return true;
         }
   </script>
-  <script>
-      function Borrar() {
-          document.getElementById("first_name2").reset();
-          document.getElementById("Hosts").reset();
-      }
-  </script>
-
-
   </body>
 </html>
