Prueba para borrar inputs y resetear variables

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Ayuda</a></li>
-        <li><a href="javascript:history.go(0)">Borrar</a></li>
+        <li><a href="index.html">Borrar</a></li>
         <li><a href="#index-banner">Subir</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -84,6 +84,11 @@
             }
             return true;
         }
+  </script>
+  <script>
+      function isReload(){
+          document.location.reload(true);
+      }
   </script>
   </body>
 </html>
