Iconos de google agregados al proyecto(La funcionalidadd de anterior y siguiente no funciona)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/google-icons.css" type="text/css" rel="stylesheet">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -72,7 +72,6 @@
       <li><a href="#index-banner" class="btn-floating blue"><i class="material-icons">home</i></i></a></li>
       <li><a class="btn-floating green darken-2"><i class="material-icons">skip_previous</i></a></li>
       <li><a class="btn-floating green darken-2"><i class="material-icons">skip_next</i></a></li>
-      <li><a class="btn-floating yellow darken-2"><i class="material-icons">help_outline</i></a></li>
       <li><a href="index.html" class="btn-floating red darken-3"><i class="material-icons">delete</i></a></li>
     </ul>
   </div>
