--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
     
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a id="Toggle" class="btn-floating btn-large blue darken-2">
-      <i class="material-icons">mode_edit</i>
+      <i class="material-icons">edit</i>
     </a>
     <ul>
       <li><a href="#index-banner" class="btn-floating blue"><i class="material-icons">home</i></i></a></li>
-      <li><a class="btn-floating green darken-2"><i class="material-icons">skip_previous</i></a></li>
-      <li><a class="btn-floating green darken-2"><i class="material-icons">skip_next</i></a></li>
       <li><a href="index.html" class="btn-floating red darken-3"><i class="material-icons">delete</i></a></li>
     </ul>
   </div>
