Se restauro la referencia a los fonts iconos

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 <body>
   <nav class="blue darken-3" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SubNetCalc</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Ayuda</a></li>
-      </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Ayuda</a></li>
@@ -57,7 +54,7 @@
         </div>           
        </div>
       <div id="Bajo" class="row center section scrollspy">
-          <a class="btn-floating btn-large waves-effect waves-light green btn tooltipped" data-position="bottom" data-tooltip="Agregar Hosts" id=Mas href="#Bajo"><i class="large material-icons">add</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light green" data-position="bottom" id=Mas href="#Bajo"><i class="mdi-content-add"></i></a>
       </div>
       <br><br>
 
@@ -66,11 +63,12 @@
     
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a id="Toggle" class="btn-floating btn-large blue darken-2">
-      <i class="material-icons">edit</i>
+      <i class="mdi-image-edit"></i>
     </a>
     <ul>
-      <li><a href="#index-banner" class="btn-floating blue"><i class="material-icons">home</i></i></a></li>
-      <li><a href="index.html" class="btn-floating red darken-3"><i class="material-icons">delete</i></a></li>
+      <li><a href="#index-banner" class="btn-floating blue"><i class="mdi-action-home"></i></a></li>
+      <li><a href="index.html" class="btn-floating yellow darken-3"><i class="mdi-action-help"></i></a></li>
+      <li><a href="index.html" class="btn-floating red darken-3"><i class="mdi-action-delete"></i></a></li>
     </ul>
   </div>
 
