Menu lateral removido

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 <body>
   <nav class="blue darken-3" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SubNetCalc</a>
-
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Ayuda</a></li>
-        <li><a href="index.html">Borrar</a></li>
-        <li><a href="#index-banner">Subir</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
@@ -66,7 +59,7 @@
       <i class="mdi-image-edit"></i>
     </a>
     <ul>
-      <li><a href="#index-banner" class="btn-floating blue"><i class="mdi-action-home"></i></a></li>
+      <li><a href="#logo-container" class="btn-floating blue"><i class="mdi-action-home"></i></a></li>
       <li><a href="index.html" class="btn-floating yellow darken-3"><i class="mdi-action-help"></i></a></li>
       <li><a href="index.html" class="btn-floating red darken-3"><i class="mdi-action-delete"></i></a></li>
     </ul>
