--- a/index.html
+++ b/index.html
@@ -72,10 +72,19 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/calc.js"></script>
+<!--
+  <script>
+      $(document).ready(function(){
+        $('a#Toggle').click(function(){
+            $(this).toggle("down");
+        });
+      });
+  </script>
+-->
   <script>
         $(document).ready(function() {
-    $('select').material_select();
-  });
+            $('select').material_select();          
+        });
   </script>
   <script>
       function isNumber(evt) {
