--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SubNet Calc</title>
 
   <!-- CSS  -->
-  <link href="css/materialize-min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/google-icons.css" type="text/css" rel="stylesheet">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -85,7 +85,7 @@
   <!--  Scripts-->
 <!--  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
   <script src="js/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize-min.js"></script>
+  <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/calc.js"></script>
   <script>
